# EzPlist

./: .eslintrc.cjs  .gitignore  README.md  README_EN.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: compose.rs  export.rs  import.rs  mod.rs  pack.rs  split.rs
src-tauri/src/core/: image_processor.rs  mod.rs  packer.rs  plist_generator.rs  types.rs
src-tauri/src/utils/: hash.rs  mod.rs  trim.rs
src/components/: AnimationPanel.tsx  AnimationPreview.tsx  BackgroundSettings.tsx  ComposeCanvas.tsx  ComposeView.tsx  ExportPanel.tsx  ImportZone.tsx  MultiRegionView.tsx  PackPreview.tsx  PreviewArea.tsx  SplitView.tsx  SpriteGrid.tsx  SpriteList.tsx
src/components/ui/: Button.tsx  Card.tsx  IconButton.tsx  Slider.tsx  Switch.tsx  Tooltip.tsx
src/lib/: tauri.ts  utils.ts
src/store/: canvasSettingsStore.ts  composeStore.ts  multiRegionStore.ts  splitStore.ts  spriteStore.ts
src/styles/: globals.css
src/types/: sprite.ts
